<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#ffffff"
        app:cardElevation="20dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/verticalGuide"
                android:contentDescription="@string/union_jack" />
            <TextView
                android:id="@+id/questionE"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/uebersetzte_folgedes"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toTopOf="@+id/verticalGuide"
                android:textAlignment="center"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/voc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/food"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@+id/questionE"
                android:textAlignment="center"
                android:textSize="35sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loesungEBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/voc"
                app:layout_constraintBottom_toTopOf="@id/verticalGuide2"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="60dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loesung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/loesung" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:translationY="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/pruefen"
                android:textColor="#ffffff"
                app:cornerRadius="5dp"
                android:textSize="22sp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                app:layout_constraintBottom_toTopOf="@id/verticalGuide2"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/richtig"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="#96d84f"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loesungEBox"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/solution_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="45dp"
                        android:paddingTop="10dp"
                        android:text="@string/richtig"
                        android:textAlignment="center"
                        android:textColor="#426e13"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/solution_text_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="45dp"
                        android:paddingBottom="10dp"
                        android:text="@string/food_essen"
                        android:textAlignment="center"
                        android:textColor="#426e13"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/falsch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="#a94747"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loesungEBox"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/solution_wrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="45dp"
                        android:paddingTop="10dp"
                        android:text="@string/falsch"
                        android:textAlignment="center"
                        android:textColor="#450909"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/solution_text_wrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="45dp"
                        android:paddingBottom="10dp"
                        android:text="@string/food_essen"
                        android:textAlignment="center"
                        android:textColor="#450909"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.80" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottombar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        app:elevation="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/quizleft"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/quizleft"
            android:contentDescription="@string/previous_button" />

        <ImageButton
            android:id="@+id/quizright"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/quizright"
            android:contentDescription="@string/next_button" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#7fbfbf"
        app:cardElevation="20dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@id/bottombar2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottombar2">
        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/quizpoints" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>