<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#219a95">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp">
        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/titleimage"
            android:contentDescription="@string/titelbild" />
    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="@id/card1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="50dp"
        android:translationY="33.5dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/slidedown" />
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="75dp"
        app:cardElevation="20dp"
        android:backgroundTint="#219a95"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="30sp"
                android:fontFamily="times new roman"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:text="@string/brauchst_du_hilfe"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                app:cornerRadius="6dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#ffffff"
                android:paddingEnd="25dp"
                android:paddingStart="13dp"
                android:paddingVertical="8dp"
                app:iconTint="#000000"
                app:icon="@drawable/faq"
                app:iconSize="31dp"
                android:textSize="20sp"
                android:text="@string/faq" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeToTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#ffffff"
                android:textSize="20sp"
                android:paddingEnd="25dp"
                android:paddingStart="13dp"
                android:paddingVertical="8dp"
                app:iconTint="#000000"
                app:icon="@drawable/tutorial"
                app:iconSize="30dp"
                android:text="@string/tutorial" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeToEinstellungen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#ffffff"
                android:textSize="20sp"
                android:paddingEnd="25dp"
                android:paddingStart="13dp"
                android:paddingVertical="8dp"
                app:iconTint="#000000"
                app:icon="@drawable/settings"
                app:iconSize="30dp"
                android:text="@string/einstellungen" />

            <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#ffffff"
                android:textSize="20sp"
                android:paddingEnd="25dp"
                android:paddingStart="13dp"
                android:paddingVertical="8dp"
                app:iconTint="#000000"
                app:icon="@drawable/exit"
                app:iconSize="30dp"
                android:text="log out" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/up"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="75dp"
        app:layout_constraintBottom_toBottomOf="@id/help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="50dp"
        android:translationY="30.5dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/slideup" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeToNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:backgroundTint="#219a95"
                    android:paddingEnd="25dp"
                    android:paddingStart="13dp"
                    android:paddingVertical="8dp"
                    app:iconTint="#ffffff"
                    app:icon="@drawable/neu"
                    app:iconSize="35dp"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    android:text="@string/emptyspaceneu" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeToQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#219a95"
                    android:paddingEnd="25dp"
                    android:paddingStart="13dp"
                    android:paddingVertical="8dp"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    app:iconTint="#ffffff"
                    app:iconSize="35dp"
                    app:icon="@drawable/game"
                    android:text="@string/quiz" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeToData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#219a95"
                    android:paddingEnd="25dp"
                    android:paddingStart="13dp"
                    android:paddingVertical="8dp"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    app:iconTint="#ffffff"
                    app:iconSize="35dp"
                    app:icon="@drawable/vocab"
                    android:text="@string/vokabeln" />


            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
